<resources>
    <string name="app_name">Alert</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="aland_islands">Åland Islands</string>
    <string name="albania">Albania</string>
    <string name="algeria">Algeria</string>
    <string name="american_samoa">American Samoa</string>
    <string name="andorra">Andorra</string>
    <string name="angola">Angola</string>
    <string name="anguilla">Anguilla</string>
    <string name="antarctica">Antarctica</string>
    <string name="antigua_and_barbuda">Antigua and Barbuda</string>
    <string name="argentina">Argentina</string>
    <string name="armenia">Armenia</string>
    <string name="aruba">Aruba</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="bahamas">Bahamas</string>
    <string name="bahrain">Bahrain</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="barbados">Barbados</string>
    <string name="belarus">Belarus</string>
    <string name="belgium">Belgium</string>
    <string name="belize">Belize</string>
    <string name="benin">Benin</string>
    <string name="bermuda">Bermuda</string>
    <string name="bhutan">Bhutan</string>
    <string name="bolivia">Bolivia</string>
    <string name="bonaire_sint_eustatius_and_saba">Bonaire, Sint Eustatius and Saba</string>
    <string name="bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="botswana">Botswana</string>
    <string name="bouvet_island">Bouvet Island</string>
    <string name="brazil">Brazil</string>
    <string name="british_indian_ocean_territory">British Indian Ocean Territory</string>
    <string name="brunei">Brunei</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="burkina_faso">Burkina Faso</string>
    <string name="burundi">Burundi</string>
    <string name="cambodia">Cambodia</string>
    <string name="cameroon">Cameroon</string>
    <string name="canada">Canada</string>
    <string name="cape_verde">Cape Verde</string>
    <string name="cayman_islands">Cayman Islands</string>
    <string name="central_african_republic">Central African Republic</string>
    <string name="chad">Chad</string>
    <string name="chile">Chile</string>
    <string name="china">China</string>
    <string name="christmas_island">Christmas Island</string>
    <string name="cocos_keeling_islands">Cocos (Keeling) Islands</string>
    <string name="colombia">Colombia</string>
    <string name="comoros">Comoros</string>
    <string name="congo">Congo</string>
    <string name="congo_the_democratic_republic_of_the">Congo, the Democratic Republic of the</string>
    <string name="cook_islands">Cook Islands</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="ivory_coast">Ivory Coast</string>
    <string name="croatia">Croatia</string>
    <string name="cuba">Cuba</string>
    <string name="curacao">Curaçao</string>
    <string name="cyprus">Cyprus</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="denmark">Denmark</string>
    <string name="djibouti">Djibouti</string>
    <string name="dominica">Dominica</string>
    <string name="dominican_republic">Dominican Republic</string>
    <string name="ecuador">Ecuador</string>
    <string name="egypt">Egypt</string>
    <string name="el_salvador">El Salvador</string>
    <string name="equatorial_guinea">Equatorial Guinea</string>
    <string name="eritrea">Eritrea</string>
    <string name="estonia">Estonia</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="falkland_islands">Falkland Islands</string>
    <string name="faroe_islands">Faroe Islands</string>
    <string name="fiji">Fiji</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="french_guiana">French Guiana</string>
    <string name="french_polynesia">French Polynesia</string>
    <string name="french_southern_territories">French Southern Territories</string>
    <string name="gabon">Gabon</string>
    <string name="gambia">Gambia</string>
    <string name="georgia">Georgia</string>
    <string name="germany">Germany</string>
    <string name="ghana">Ghana</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="greece">Greece</string>
    <string name="greenland">Greenland</string>
    <string name="grenada">Grenada</string>
    <string name="guadeloupe">Guadeloupe</string>
    <string name="guam">Guam</string>
    <string name="guatemala">Guatemala</string>
    <string name="guernsey">Guernsey</string>
    <string name="guinea">Guinea</string>
    <string name="guinea_bissau">Guinea-Bissau</string>
    <string name="guyana">Guyana</string>
    <string name="haiti">Haiti</string>
    <string name="heard_island_and_mcdonald_islands">Heard Island and McDonald Islands</string>
    <string name="holy_see_vatican_city_state_">Holy See (Vatican City State)</string>
    <string name="honduras">Honduras</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Hungary</string>
    <string name="iceland">Iceland</string>
    <string name="india">India</string>
    <string name="indonesia">Indonesia</string>
    <string name="iran_islamic_republic_of">Iran, Islamic Republic of</string>
    <string name="iraq">Iraq</string>
    <string name="ireland">Ireland</string>
    <string name="isle_of_man">Isle of Man</string>
    <string name="israel">Israel</string>
    <string name="italy">Italy</string>
    <string name="jamaica">Jamaica</string>
    <string name="japan">Japan</string>
    <string name="jersey">Jersey</string>
    <string name="jordan">Jordan</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="kenya">Kenya</string>
    <string name="kiribati">Kiribati</string>
    <string name="korea_democratic_people_srepublic_of">Korea, Democratic People\'s Republic of</string>
    <string name="korea_republic_of">Korea, Republic of</string>
    <string name="kuwait">Kuwait</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="lao_people_sdemocratic_republic">Lao People\'s Democratic Republic</string>
    <string name="latvia">Latvia</string>
    <string name="lebanon">Lebanon</string>
    <string name="lesotho">Lesotho</string>
    <string name="liberia">Liberia</string>
    <string name="libya">Libya</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="lithuania">Lithuania</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="macao">Macao</string>
    <string name="macedonia_the_former_yugoslav_republic_of">Macedonia, the former Yugoslav Republic of</string>
    <string name="madagascar">Madagascar</string>
    <string name="malawi">Malawi</string>
    <string name="malaysia">Malaysia</string>
    <string name="maldives">Maldives</string>
    <string name="mali">Mali</string>
    <string name="malta">Malta</string>
    <string name="marshall_islands">Marshall Islands</string>
    <string name="martinique">Martinique</string>
    <string name="mauritania">Mauritania</string>
    <string name="mauritius">Mauritius</string>
    <string name="mayotte">Mayotte</string>
    <string name="mexico">Mexico</string>
    <string name="micronesia_federated_states_of">Micronesia, Federated States of</string>
    <string name="moldova_republic_of">Moldova, Republic of</string>
    <string name="monaco">Monaco</string>
    <string name="mongolia">Mongolia</string>
    <string name="montenegro">Montenegro</string>
    <string name="montserrat">Montserrat</string>
    <string name="morocco">Morocco</string>
    <string name="mozambique">Mozambique</string>
    <string name="myanmar">Myanmar</string>
    <string name="namibia">Namibia</string>
    <string name="nauru">Nauru</string>
    <string name="nepal">Nepal</string>
    <string name="netherlands">Netherlands</string>
    <string name="new_caledonia">New Caledonia</string>
    <string name="new_zealand">New Zealand</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="niger">Niger</string>
    <string name="nigeria">Nigeria</string>
    <string name="niue">Niue</string>
    <string name="norfolk_island">Norfolk Island</string>
    <string name="northern_mariana_islands">Northern Mariana Islands</string>
    <string name="norway">Norway</string>
    <string name="oman">Oman</string>
    <string name="pakistan">Pakistan</string>
    <string name="palau">Palau</string>
    <string name="palestinian_territory_occupied">Palestinian Territory, Occupied</string>
    <string name="panama">Panama</string>
    <string name="papua_new_guinea">Papua New Guinea</string>
    <string name="paraguay">Paraguay</string>
    <string name="peru">Peru</string>
    <string name="millippines">Millippines</string>
    <string name="pitcairn">Pitcairn</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="puerto_rico">Puerto Rico</string>
    <string name="qatar">Qatar</string>
    <string name="reunion">Réunion</string>
    <string name="romania">Romania</string>
    <string name="russian_federation">Russian Federation</string>
    <string name="rwanda">Rwanda</string>
    <string name="saint_barthelemy">Saint Barthélemy</string>
    <string name="saint_helena_ascension_and_tristan_da_cunha">Saint Helena, Ascension and Tristan da Cunha</string>
    <string name="saint_kitts_and_nevis">Saint Kitts and Nevis</string>
    <string name="saint_lucia">Saint Lucia</string>
    <string name="saint_martin_french_part_">Saint Martin (French part)</string>
    <string name="saint_pierre_and_miquelon">Saint Pierre and Miquelon</string>
    <string name="saint_vincent_and_the_grenadines">Saint Vincent and the Grenadines</string>
    <string name="samoa">Samoa</string>
    <string name="san_marino">San Marino</string>
    <string name="sao_tome_and_principe">Sao Tome and Principe</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="senegal">Senegal</string>
    <string name="nav_home">Home</string>
    <string name="nav_risk">Risk Monitoring</string>
    <string name="nav_minimum">Minimum Preparedness</string>
    <string name="nav_advanced">Advanced Preparedness</string>
    <string name="nav_response">Response Plan</string>
    <string name="nav_country">Country Office Profile</string>
    <string name="nav_my_country">My Country</string>
    <string name="nav_logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="text_green">Green</string>
    <string name="text_amber">Amber</string>
    <string name="text_red">Red</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_country">Country</string>
    <string name="txt_level_1">Level 1</string>
    <string name="txt_optional">Optional</string>
    <string name="txt_level_2">Level 2</string>
    <string name="txt_select_level_1">Please select level 1</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="done">Done</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="new_password">New password</string>
    <string name="existing_password">Existing password</string>
    <string name="notes_action">Action notes</string>
    <string name="txt_attachments">Attachments</string>
    <string name="update_due_date_action">Update due date</string>
    <string name="assign_action">Assign action</string>
    <string name="txt_needs_done">What needs to be done?</string>
    <string name="txt_hazard_association">Hazard Association</string>
    <string name="txt_department">Department</string>
    <string name="txt_assign_to">Assign to</string>
    <string name="txt_budget">Budget</string>
    <string name="txt_doc_required">Is a document required for completion?</string>
</resources>