<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_risk"
            android:title="@string/nav_risk" />
        <item
            android:id="@+id/nav_minimum"
            android:title="@string/nav_minimum" />
        <item
            android:id="@+id/nav_advanced"
            android:title="@string/nav_advanced" />
        <item
            android:id="@+id/nav_response"
            android:title="@string/nav_response" />
        <item
            android:id="@+id/nav_country"
            android:title="@string/nav_country" />
        <item
            android:id="@+id/nav_my_country"
            android:title="@string/nav_my_country" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>