<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/edit"
            android:icon="@drawable/action_edit"
            android:title="@string/edit" />
        <item
            android:id="@+id/update_date"
            android:icon="@drawable/update_due_date_action"
            android:title="@string/update_due_date_action" />
        <item
            android:id="@+id/assign_action"
            android:icon="@drawable/assign_action"
            android:title="@string/assign_action" />
        <item
            android:id="@+id/action_notes"
            android:icon="@drawable/notes_action"
            android:title="@string/notes_action" />
        <item
            android:id="@+id/attachments"
            android:icon="@drawable/attach_action"
            android:title="@string/txt_attachments" />
    </group>
</menu>