<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/actionbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <LinearLayout
        android:layout_margin="@dimen/double_margin"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:hint="@string/existing_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/reenterBae"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/re_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/etReenterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>





    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnColor"
        android:layout_alignParentBottom="true"
        android:text="@string/done"
        android:textColor="@android:color/white" />
</RelativeLayout>