<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.alertpreparedness.platform.alert.dashboard.activity.AlertTypesActivity">

    <include
        android:id="@+id/action_toolbar"
        layout="@layout/action_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="290dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/green_dot_26dp"
        android:drawablePadding="16dip"
        android:text="@string/text_green"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar" />

    <TextView
        android:id="@+id/textViewAmber"
        android:layout_width="290dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/amber_dot_26dp"
        android:drawablePadding="16dip"
        android:text="@string/text_amber"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreen" />

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="290dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/red_dot_26dp"
        android:drawablePadding="16dip"
        android:text="@string/text_red"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmber" />


</android.support.constraint.ConstraintLayout>
